@@ -2,6 +2,15 @@
 
 	Backported from mainline.
 
+	2012-12-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* asan.c (instrument_derefs): Handle bitfield COMPONENT_REFs
+	accesses as reads/writes to their DECL_BIT_FIELD_REPRESENTATIVE.
+
+2013-06-21  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported from mainline.
+
 	2012-12-06  Peter Bergner  <bergner@vnet.ibm.com>
 
 	* config/rs6000/sysv4.h (TARGET_ASAN_SHADOW_OFFSET): Define.
